# benchie

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.benchiea/: data.json
.cargo-husky/hooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: artifacts.yml  ci.yml  release.yml
scripts/: install.ps1  install.sh  release.sh
src/: benchmark.rs  cli.rs  crash_report.rs  git.rs  lib.rs  main.rs  show.rs  storage.rs  system.rs  table.rs  utils.rs  value.rs
src/os/: mod.rs  unix.rs  windows.rs
tests/: benchmark.rs  git.rs  show.rs  storage.rs
tests/common/: mod.rs
