[package]
name = "benchie"
version = "0.1.0"
edition = "2021"
description = "A benchmarking tool"
documentation = "https://docs.rs/benchie"
repository = "https://github.com/benchie-io/benchie"
homepage = "https://benchie.io"
license = "MIT"

[lib]
name = "benchie"
path = "src/lib.rs"

[[bin]]
name = "benchie"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
anyhow = "1.0"
cli-table = "0.4"
sysinfo = "0.23"
bytesize = "1.1.0"
url = "2.2.2"
libc = "0"

[dev-dependencies]
tempfile = "3"
serial_test = "0.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
