[package]
name = "benchie"
version = "0.2.0"
edition = "2021"
authors = ["Christian Mösl <christian.moesl@benchie.io>", "Manuel Widmoser <manuel.widmoser@benchie.io>"]
description = "A benchmarking tool"
documentation = "https://docs.rs/benchie"
repository = "https://github.com/benchie-io/benchie"
homepage = "https://benchie.io"
license = "MIT"

[lib]
name = "benchie"
path = "src/lib.rs"

[[bin]]
name = "benchie"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
cli-table = "0.4"
sysinfo = "0.23"
bytesize = { version = "1.1.0", features = ["serde"] }
url = "2.2.2"
libc = "0"
git2 = { version = "0.14.2", features = ["vendored-libgit2", "vendored-openssl"] }
thiserror = "1.0.30"
itertools = "0.10.3"

[dev-dependencies]
tempfile = "3"
serial_test = "0.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
