[package]
name = "benchie"
version = "0.4.0"
edition = "2021"
authors = ["Christian Mösl <christian.moesl@benchie.io>", "Manuel Widmoser <manuel.widmoser@benchie.io>"]
description = "A benchmarking tool"
documentation = "https://docs.rs/benchie"
repository = "https://github.com/benchie-io/benchie"
homepage = "https://benchie.io"
license = "MIT"

[lib]
name = "benchie"
path = "src/lib.rs"

[[bin]]
name = "benchie"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
cli-table = "0.4"
sysinfo = "0.24"
bytesize = { version = "1.1", features = ["serde"] }
url = "2.2"
libc = "0"
git2 = { version = "0.13", features = ["vendored-libgit2", "vendored-openssl"] }
thiserror = "1.0"
itertools = "0.10"
colored = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.37.0", features = ["alloc", "Win32_Foundation", "Win32_Security", "Win32_System_Threading" ] }

[dev-dependencies]
tempfile = "3"
serial_test = "0.7"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
